[package]
name = "rust-bybit"
version = "0.2.0"
license = "MIT"
authors = ["jukanntenn <jukanntenn@outlook.com>"]
edition = "2021"

description = "Rust API connector for Bybit's WebSocket V5 API"
keywords = ["cryptocurrency", "trading", "bybit"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/crate/rust-bybit/"
repository = "https://github.com/yufuquant/rust-bybit"
readme = "README.md"

[lib]
name = "bybit"
path = "src/lib.rs"

[dependencies]
tungstenite = { version = "*", features = ["native-tls"] }
thiserror = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
ring = "*"
hex = "*"
log = "*"

[dev-dependencies]
env_logger = "*"
